Add test cloning workflow and compact layout